# EgoLogQA

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: hygiene.yml
.streamlit/: config.toml  secrets.toml.example
app/: streamlit_app.py
configs/: microagi00_ros2.yaml
docs/: EGOLOGQA_MASTER_DOCUMENTATION.md
report_out/: report.json  report.md
report_out/debug/: exposure_samples.csv
scripts/: exposure_lowclip_regression.sh  hygiene_check.sh  post_change_verify.sh  verify_4_mcap.sh
src/egologqa/: __main__.py  ai_summary.py  artifacts.py  cli.py  config.py  constants.py  drop_regions.py  frame_flags.py  gate.py  kiosk_helpers.py  models.py  pipeline.py  reader.py  report.py  sampling.py  segments.py  time.py  topic_select.py  ui_text.py
tests/: conftest.py
tests/integration/: test_pipeline_inmemory.py
tests/unit/: test_ai_summary.py  test_artifact_paths_relative.py  test_artifact_plots.py  test_benchmarks_opt_in.py  test_blur_denominator_pipeline.py  test_blur_depth_debug_csv.py  test_blur_evidence_selection.py  test_blur_formula_lock.py  test_blur_warn_logic.py  test_clean_segments_counterfactual.py  test_decode_cv2_diagnostics_pipeline.py  test_depth_dtype_warning.py  test_drop_regions.py  test_evidence_manifest_pipeline.py  test_exposure_conditional_saturation.py  test_exposure_debug_csv.py  test_exposure_evidence_selection.py  test_file_summary_metrics.py  test_frame_flags_sync_alias.py  test_gate.py  test_hf_fetch.py  (+22 more)
validation/: README.md  labels_template.csv  run_validation.py  sample_plan.md  summarize_results.py
(+7 files in other folders)
